fix: increase z-index for cookie-consent

--- a/_sass/cookie-consent-sexy.scss
+++ b/_sass/cookie-consent-sexy.scss
@@ -1,5 +1,6 @@
 .cookie-consent {
   position: fixed;
+  z-index: 10;
   bottom: 0;
   width: 100%;
   background: inherit;
